force-app/main/default/objects/Account_Team_Change__c/Account_Team_Change__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail of Account Team Manager changes (add / remove / role change). Rows are written by AccountTeamManagerController in system context; actor and timestamp come from CreatedBy / CreatedDate. Public Read-Only so it is reportable; no edit/delete is granted, keeping the trail tamper-resistant.</description>
    <label>Account Team Change</label>
    <pluralLabel>Account Team Changes</pluralLabel>
    <nameField>
        <displayFormat>ATC-{00000}</displayFormat>
        <label>Change ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>