force-app/main/default/objects/Account_Team_Change__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Changes</relationshipLabel>
    <relationshipName>Account_Team_Changes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account whose team membership changed. Always set by the controller; left optional so account deletion never cascades to or is blocked by the audit trail.</description>
</CustomField>