force-app/main/default/objects/Account_Team_Change__c/fields/Account_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Access__c</fullName>
    <label>Account Access</label>
    <type>Text</type>
    <length>40</length>
    <description>The account access level granted (set on Add): None, Read, Edit, or All.</description>
</CustomField>