force-app/main/default/objects/Account_Team_Change__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Add, Remove, or Role Change.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Role Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>