force-app/main/default/objects/Account_Team_Change__c/fields/New_Role__c.field-meta.xml
<CustomField>
    <fullName>New_Role__c</fullName>
    <label>New Role</label>
    <type>Text</type>
    <length>255</length>
    <description>The team role after the change (set on Add and Role Change).</description>
</CustomField>