force-app/main/default/objects/Account_Team_Change__c/fields/Previous_Role__c.field-meta.xml
<CustomField>
    <fullName>Previous_Role__c</fullName>
    <label>Previous Role</label>
    <type>Text</type>
    <length>255</length>
    <description>The team role before the change (set on Remove and Role Change).</description>
</CustomField>