force-app/main/default/objects/Account_Team_Change__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <label>Team Member</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Account Team Changes</relationshipLabel>
    <relationshipName>Account_Team_Changes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who was added, removed, or re-roled.</description>
</CustomField>